--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
-    "name": "laravel-admin-ext/media-manager",
+    "name": "shoes9527/media-manager",
     "description": "Media manager for laravel",
     "type": "library",
-    "keywords": ["laravel-admin", "media", "manager"],
-    "homepage": "https://github.com/laravel-admin-extensions/media-manager",
+    "keywords": [
+        "laravel-admin",
+        "media",
+        "manager"
+    ],
+    "homepage": "https://github.com/shoes9527/media-manager",
     "license": "MIT",
     "authors": [
         {
-            "name": "z-song",
-            "email": "zosong@126.com"
+            "name": "shoes9527"
         }
     ],
     "require": {
         "php": ">=7.0.0",
-        "encore/laravel-admin": "~1.6"
+        "encore/laravel-admin": "~1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
